Revert "fix: The cross button should be right aligned inside the input box (#2370)"
This reverts commit 01127edc8041c995fb3a80cb4ee8c46289e50b4f.

--- a/src/app/fyle/personal-cards/personal-cards.page.scss
+++ b/src/app/fyle/personal-cards/personal-cards.page.scss
@@ -294,6 +294,7 @@
     mat-form-field {
       ::ng-deep .mat-mdc-text-field-wrapper {
         padding-left: 6px;
+        padding-right: 6px;
       }
 
       ::ng-deep .mat-icon {
@@ -319,6 +320,7 @@
     }
 
     &-close {
+      margin: -10px;
       font-size: 18px;
       background-color: transparent;
       color: $black-light;
